--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,11 +1,12 @@
-<mat-sidenav-container class="sidenav-container">
+<!-- <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>菜单</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/user-info">账号信息(更新中)</a>
+      <a mat-list-item href="/userinfo/user-info">个人信息</a>
+      <a mat-list-item href="/userinfo/account">账号信息</a>
       <a mat-list-item href="/">asnowtree-主页</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -19,9 +20,48 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>用户详情</span>
+      <span>用户设置</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
+
+<div class="all-page">
+  <p-sidebar [(visible)]="visibleSidebar1" style="width: auto;" [baseZIndex]="10000" style="background-color: aquamarine;">
+    <h3>选项</h3>
+    <mat-nav-list>
+    <a mat-list-item href="/userinfo/user-info">个人信息</a>
+        <a mat-list-item href="/">asnowtree-主页</a>
+      </mat-nav-list>
+  </p-sidebar>
+  <div style="display: flex;">
+   
+    <div class="panel-menu">
+      <h3>选项</h3>
+      <mat-nav-list>
+      <a mat-list-item href="/userinfo/user-info">个人信息</a>
+          <!-- <a mat-list-item href="/userinfo/account">账号信息</a> -->
+          <a mat-list-item href="/">asnowtree-主页</a>
+        </mat-nav-list>
+    </div>
+    <div class="panel-content">
+      <nav>
+        <div class="nav-div" >
+          <div class="nav-menu" >
+            <a class="show-display">菜单</a>
+            <mat-icon aria-label="Side nav toggle icon" class="show-hide" (click)="visibleSidebar1 = true">menu</mat-icon>
+          </div>
+          <div class="nav-title"><h2>用户信息管理</h2></div>
+        </div>
+      </nav>
+      <div style="overflow: auto;height: 100%;">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  
+  </div>
+</div>
+
+
+<!-- <p-button class="mr-2 menu" (click)="visibleSidebar1 = true" icon="pi pi-arrow-right"></p-button> -->
