--- a/src/app/user-info/user-info.component.scss
+++ b/src/app/user-info/user-info.component.scss
@@ -12,16 +12,28 @@
     padding-right: 8px;
   }
 
+  #avatarFile {
+    display: none;
+  }
+
   p-fileUpload {
     width: 100%;
   }
-  
+
   img.avatar{
     width: 60px;
     height: 60px;
   }
 
-
+  
+  .td-button{
+    margin-block-end: 0.5rem;
+  }
+@media screen and (min-width :720px){
+  .td-button{
+    max-width: 10rem;
+  }
+}
   .flex-table-u{
     display: flex;
     flex-direction: column;
